# research-assistant

./: .env.example  Dockerfile.agent  Dockerfile.mcp  Dockerfile.web  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  budget.py  cli.py  config.py  core.py  executor.py  llm_client.py  mcp_client.py  models.py  planner.py  reflector.py  state.py  telemetry.py
agent/prompts/: system_planner.txt  system_reflector.txt
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 001_initial.py
docs/: index.html
examples/: run_trace_1.md  run_trace_2.md
infra/: nginx.conf
mcp_server/: sandbox.py  server.py
mcp_server/tools/: execute_python.py  fetch_url.py  read_pdf.py  search_kb.py  web_search.py
scripts/: demo.sh  entrypoint.sh  reset_db.sh
tests/: conftest.py
tests/failure_modes/: __init__.py  test_budget_exceeded.py  test_infinite_loop_guard.py  test_malformed_tool_output.py  test_model_refusal.py  test_tool_timeout.py
tests/integration/: test_full_run_mocked.py
tests/unit/: test_budget.py  test_mcp_client.py  test_planner.py
web/: app.py
